tests/files/parser_tests/should_fail/044.cmdr
//Should not parse due to incorrect piping
x = `echo hi` || `git clone myurl.com`;